# Genetic-evolution-in-the-financial-system

./: .gitignore  README.md  START.md  pyproject.toml  requirements.txt  run.py
config/: __init__.py  world_rules.yaml
core/: __init__.py  agent.py  dna.py  environment.py  gene.py  world_clock.py
environment/: __init__.py  dimension_1_price_data.xlsx  dimension_3_volatility_risk_data.xlsx  dimension_4_trend_momentum_data.xlsx  dimension_8_derivatives_advanced_data.xlsx  test_dimension_1_price.py  test_dimension_2_volume_liquidity.py  test_dimension_6_fundamentals.py  test_dimension_7_macro_industry.py  数据维度说明文档.md
environment/data_market/: dimension_2_volume_liquidity_data.xlsx  dimension_3_volatility_risk_data.xlsx  dimension_8_derivatives_advanced_data.xlsx  test_dimension_2_volume_liquidity.py  test_dimension_3_volatility_risk.py  test_dimension_4_trend_momentum.py  test_dimension_5_money_flow_sentiment.py  test_dimension_6_fundamentals.py  test_dimension_7_macro_industry.py  test_dimension_8_derivatives_advanced.py
environment/data_market/股票数据/: dimension_1_price_data.xlsx  dimension_4_trend_momentum_data.xlsx  (+2 more)
genetics/: __init__.py  gene_pool.py  mutation.py
lifecycle/: __init__.py  birth.py  death.py  reproduction.py
reports/: __init__.py  report_generator.py
resources/: __init__.py  resources.py
simulation/: __init__.py  demo.py  population.py  world.py
simulation_reports/report_20260121_235130/: population_history.csv  price_history.csv  report.md  report_data.json
storage/: __init__.py  event_store.py  graveyard.py  snapshot.py
